--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-.DS_Store
+# Developer Tool Config Files
 .clj-kondo
 .cpcache
-.key
+.DS_Store
 .nrepl-port
 .rebel_readline_history
 .vscode
+
+# Build Directories and Files
+.key
 email-server.edn
 logs
 target
