--- a/nginx/nginx-template.conf
+++ b/nginx/nginx-template.conf
@@ -7,11 +7,10 @@ server {
     }
 }
 
+# Main server(s)
 server {
-    listen      8443 # ssl;
+    listen      8443 ssl;
     server_name {domain name};
-
-    #rewrite ^ http://localhost$request_uri?;
 
     location / {
         add_header 'Access-Control-Allow-Origin' '*';
@@ -28,8 +27,28 @@ server {
     }
 
     # Add certbot path after running certbot and uncomment
-    ssl_certificate      /etc/letsencrypt/live/$server_name/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/$server_name/privkey.pem;
+    ssl_certificate      /etc/letsencrypt/live/{domain name}/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/{domain name}/privkey.pem;
+
+    ssl_session_cache    shared:SSL:1m;
+    ssl_session_timeout  5m;
+
+    ssl_ciphers  HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers  on;
+}
+
+# Redirect other URLs
+server {
+    listen      8443 ssl;
+    server_name {domain name};
+
+    location / {
+        return 301 https://pyrecast.com$request_uri;
+    }
+
+    # Add certbot path after running certbot and uncomment
+    ssl_certificate      /etc/letsencrypt/live/{domain name}/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/{domain name}/privkey.pem;
 
     ssl_session_cache    shared:SSL:1m;
     ssl_session_timeout  5m;
