--- a/nginx/nginx-template.conf
+++ b/nginx/nginx-template.conf
@@ -43,7 +43,7 @@ server {
     server_name {domain name};
 
     location / {
-        return 301 https://pyrecast.com$request_uri;
+        return 301 https://{redirect to domain name}$request_uri;
     }
 
     # Add certbot path after running certbot and uncomment
