Add Sentry for React via NPM.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "@sentry/react": "^9.16.0",
     "mapbox-gl": "^3.9.3",
-    "vega-embed": "^6.29.0",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "vega-embed": "^6.29.0"
   },
   "devDependencies": {
     "webpack": "^5.91.0",
