--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "webpack-cli": "^5.1.4"
   },
   "overrides": {
-  "vega": "^5.32.0",
-  "vega-functions": "^5.17.0"
+    "vega": "^6.2.0"
   }
 }
